Cleanup - minor refactor of method names